testsuite/poke.pkl/struct-types-defun-diag-2.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int i;
    fun foo = void:
      {
        fun bar = void:
        {
          i = 2; /* { dg-error "invalid assignment" } */
        }

        bar;
      }
  };
